--- a/index.html
+++ b/index.html
@@ -5,6 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BandSite</title>
+    <link rel="stylesheet" href="./styles/bio.css" />
   </head>
-  <body></body>
+  <body>
+    <!--------------Header------------------>
+    <header class="header">
+      <div class="header__wrapper">
+        <div class="header__logo-wrapper">
+          <h1 class="header__logo">BANDSITE</h1>
+        </div>
+        <div class="header__nav-wrapper">
+          <a href=""
+            ><div class="header__nav-link-container">
+              <h3 class="header__nav-link">Biography</h3>
+            </div></a
+          >
+          <a href=""
+            ><div class="header__nav-link-container">
+              <h3 class="header__nav-link">Shows</h3>
+            </div></a
+          >
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
