--- a/index.html
+++ b/index.html
@@ -11,22 +11,224 @@
     <!--------------Header------------------>
     <header class="header">
       <div class="header__wrapper">
-        <div class="header__logo-wrapper">
-          <h1 class="header__logo">BANDSITE</h1>
-        </div>
+        <a href="/" class="header__logo-wrapper">
+          <img
+            class="header__logo"
+            src="./assets/Logo/Logo-bandsite.svg"
+            alt="bandsite logo"
+          />
+        </a>
         <div class="header__nav-wrapper">
-          <a href=""
-            ><div class="header__nav-link-container">
-              <h3 class="header__nav-link">Biography</h3>
-            </div></a
-          >
-          <a href=""
-            ><div class="header__nav-link-container">
-              <h3 class="header__nav-link">Shows</h3>
-            </div></a
-          >
+          <a class="header__nav-link-container" href="">
+            <h3 class="header__nav-link">Biography</h3>
+          </a>
+          <a class="header__nav-link-container" href="">
+            <h3 class="header__nav-link">Shows</h3>
+          </a>
         </div>
       </div>
     </header>
+
+    <!--------------------------Hero Section--------------------->
+    <section class="hero">
+      <div class="hero__wrapper">
+        <h1 class="hero__title">The Bees Knees</h1>
+      </div>
+    </section>
+
+    <!---------------Info Section--------------------->
+    <section class="info">
+      <div class="info__wrapper">
+        <h2 class="info__title">About the Musicians</h2>
+        <div class="info__content-wrapper">
+          <img
+            class="info__band-image"
+            src="./assets/Images/band.jpg"
+            alt="live performance"
+          />
+          <h3 class="info__quote">
+            “We push each other to be the best. It’s not uncommon for one of us
+            to say ‘this needs to be better, back to the drawing board’”
+          </h3>
+          <h4 class="info__quote-speaker">
+            - Bryan Teddy, lead vocalist of The Bees Knees
+          </h4>
+          <h2 class="info__bio-title">The Bees Knees</h2>
+          <div class="info__bio-container">
+            <div class="info__bio">
+              <p>
+                The Bees Knees is a pop rock band originating from San
+                Francisco, California. The band consists of lead vocalist Bryan
+                Teddy, guitarist Mack Tolkens, guitarist Andrew Green, bassist
+                Kent Zulkee and drummer Freddie Fischer. The band achieved its
+                first commercial success as an unsigned act, drawing attention
+                from manager Cam Adams. Having worked with other popular acts
+                (The Elephant In The Room, One Trick Pony, The Cat’s Meow),
+                Adams was confident the band could succeed even further, pushing
+                them to sign with Magenta Records.
+              </p>
+            </div>
+            <div class="info__bio">
+              <p>
+                From there, the band has soared, gaining international
+                recognition and ranking in the top 10 on the Poster Charts. New
+                fans immediately fell in love with the band’s original and
+                organic attitude, solidifying their place as one of the hottest
+                and fastest up and coming acts of this century. Fans
+                affectionately refer to themselves as “The Hive” and are drawn
+                to their candid and authentic performances on stage. Looking
+                forward to touring in the future, The Bees Knees are currently
+                recording their second studio album, looking to be released in
+                late 2021.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!----------------------------Photo Gallery-------------------------->
+
+    <section class="photos">
+      <div class="photos__container">
+        <h2 class="photos__title">Photo Gallery</h2>
+        <div class="photos__images-container">
+          <img
+            class="photos__image"
+            src="./assets/Images/Photo-gallery-1.jpg"
+            alt=""
+          />
+          <img
+            class="photos__image"
+            src="./assets/Images/Photo-gallery-2.jpg"
+            alt=""
+          />
+          <img
+            class="photos__image"
+            src="./assets/Images/Photo-gallery-3.jpg"
+            alt=""
+          />
+          <img
+            class="photos__image"
+            src="./assets/Images/Photo-gallery-4.jpg"
+            alt=""
+          />
+          <img
+            class="photos__image"
+            src="./assets/Images/Photo-gallery-5.jpg"
+            alt=""
+          />
+          <img
+            class="photos__image"
+            src="./assets/Images/Photo-gallery-6.jpg"
+            alt=""
+          />
+          <img
+            class="photos__image"
+            src="./assets/Images/Photo-gallery-7.jpg"
+            alt=""
+          />
+          <img
+            class="photos__image"
+            src="./assets/Images/Photo-gallery-8.jpg"
+            alt=""
+          />
+          <img
+            class="photos__image"
+            src="./assets/Images/Photo-gallery-9.jpg"
+            alt=""
+          />
+        </div>
+      </div>
+    </section>
+
+    <!------------------Footer--------------------------->
+
+    <footer class="footer">
+      <div class="footer__wrapper">
+        <div class="footer__contact-info-container">
+          <div class="footer__headings-container">
+            <h2 class="footer__title">Get in Touch</h2>
+            <div class="footer__socials-container">
+              <a href=""
+                ><img
+                  class="footer__socials-icon"
+                  src="./assets/Icons/SVG/Icon-instagram.svg"
+                  alt=""
+              /></a>
+              <a href=""
+                ><img
+                  class="footer__socials-icon"
+                  src="./assets/Icons/SVG/Icon-facebook.svg"
+                  alt=""
+              /></a>
+              <a href=""
+                ><img
+                  class="footer__socials-icon"
+                  src="./assets/Icons/SVG/Icon-twitter.svg"
+                  alt=""
+              /></a>
+            </div>
+          </div>
+          <div class="footer__people-container">
+            <div class="footer__person-card">
+              <div class="footer__name">
+                <p class="footer__name-text">Cam Adams</p>
+                <p class="footer__name-text">The Bees Knees Management</p>
+              </div>
+              <div class="footer__location">
+                <p class="footer__location-text">503 Broadway Penthouse,</p>
+                <p class="footer__location-text">New York, NY 10012, USA</p>
+              </div>
+              <div class="footer__email">
+                <a
+                  class="footer__email-text"
+                  href="mailto:info@thebeesknees.com"
+                  >info@thebeesknees.com</a
+                >
+              </div>
+            </div>
+            <div class="footer__person-card">
+              <div class="footer__name">
+                <p class="footer__name-text">Pearl Gregg</p>
+                <p class="footer__name-text">Limitless Artist Group</p>
+              </div>
+              <div class="footer__location">
+                <p class="footer__location-text">Booking Agent for</p>
+                <p class="footer__location-text">USA / South America / Japan</p>
+              </div>
+              <div class="footer__email">
+                <a
+                  class="footer__email-text"
+                  href="mailto:pearl.gregg@limitlessag.com"
+                  >pearl.gregg@limitlessag.com</a
+                >
+              </div>
+            </div>
+            <div class="footer__person-card">
+              <div class="footer__name">
+                <p class="footer__name-text">Carson Whyte</p>
+                <p class="footer__name-text">ARCH Entertainment</p>
+              </div>
+              <div class="footer__location">
+                <p class="footer__location-text">Booking Agent for</p>
+                <p class="footer__location-text">UK / EU / AU</p>
+              </div>
+              <div class="footer__email">
+                <a
+                  class="footer__email-text"
+                  href="mailto@cwhyte@archentertainment.com"
+                  >cwhyte@archentertainment.com</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <img class="footer__logo" src="./assets/Logo/Logo-bandsite.svg" alt="" />
+      <h3 class="footer__copyright">
+        Copyright The Bees Knees © 2021 All Rights Reserved
+      </h3>
+    </footer>
   </body>
 </html>
