make tablet responsive

--- a/index.html
+++ b/index.html
@@ -41,11 +41,13 @@
       <div class="info__wrapper">
         <h2 class="info__title">About the Musicians</h2>
         <div class="info__content-wrapper">
-          <img
-            class="info__band-image"
-            src="./assets/Images/band.jpg"
-            alt="live performance"
-          />
+          <div class="info__band-image-container">
+            <img
+              class="info__band-image"
+              src="./assets/Images/band.jpg"
+              alt="live performance"
+            />
+          </div>
           <h3 class="info__quote">
             “We push each other to be the best. It’s not uncommon for one of us
             to say ‘this needs to be better, back to the drawing board’”
