make tablet responsive

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--------------Header------------------>
     <header class="header">
       <div class="header__wrapper">
-        <a href="/" class="header__logo-wrapper">
+        <a href="./index.html" class="header__logo-wrapper">
           <img
             class="header__logo"
             src="./assets/Logo/Logo-bandsite.svg"
@@ -19,10 +19,13 @@
           />
         </a>
         <div class="header__nav-wrapper">
-          <a class="header__nav-link-container" href="">
-            <h3 class="header__nav-link">Biography</h3>
+          <a
+            class="header__nav-link-container header__nav-link-container--active"
+            href="./index.html"
+          >
+            <h3 class="header__nav-link header__nav-link--active">Biography</h3>
           </a>
-          <a class="header__nav-link-container" href="">
+          <a class="header__nav-link-container" href="#">
             <h3 class="header__nav-link">Shows</h3>
           </a>
         </div>
@@ -227,7 +230,9 @@
           </div>
         </div>
       </div>
-      <img class="footer__logo" src="./assets/Logo/Logo-bandsite.svg" alt="" />
+      <a href="./index.html"
+        ><img class="footer__logo" src="./assets/Logo/Logo-bandsite.svg" alt=""
+      /></a>
       <h3 class="footer__copyright">
         Copyright The Bees Knees © 2021 All Rights Reserved
       </h3>
