make desktop responsive

--- a/index.html
+++ b/index.html
@@ -148,12 +148,26 @@
     </section>
 
     <!------------------Footer--------------------------->
-
     <footer class="footer">
       <div class="footer__wrapper">
-        <div class="footer__contact-info-container">
-          <div class="footer__headings-container">
+        <div class="footer__card-container">
+          <div class="footer__card">
             <h2 class="footer__title">Get in Touch</h2>
+            <div class="footer__name">
+              <p class="footer__name-text">Cam Adams</p>
+              <p class="footer__name-text">The Bees Knees Management</p>
+            </div>
+            <div class="footer__location">
+              <p class="footer__location-text">503 Broadway Penthouse,</p>
+              <p class="footer__location-text">New York, NY 10012, USA</p>
+            </div>
+            <div class="footer__email">
+              <a class="footer__email-text" href="mailto:info@thebeesknees.com"
+                >info@thebeesknees.com</a
+              >
+            </div>
+          </div>
+          <div class="footer__card">
             <div class="footer__socials-container">
               <a href=""
                 ><img
@@ -174,68 +188,50 @@
                   alt=""
               /></a>
             </div>
+            <div class="footer__name">
+              <p class="footer__name-text">Pearl Gregg</p>
+              <p class="footer__name-text">Limitless Artist Group</p>
+            </div>
+            <div class="footer__location">
+              <p class="footer__location-text">Booking Agent for</p>
+              <p class="footer__location-text">USA / South America / Japan</p>
+            </div>
+            <div class="footer__email">
+              <a
+                class="footer__email-text"
+                href="mailto:pearl.gregg@limitlessag.com"
+                >pearl.gregg@limitlessag.com</a
+              >
+            </div>
           </div>
-          <div class="footer__people-container">
-            <div class="footer__person-card">
-              <div class="footer__name">
-                <p class="footer__name-text">Cam Adams</p>
-                <p class="footer__name-text">The Bees Knees Management</p>
-              </div>
-              <div class="footer__location">
-                <p class="footer__location-text">503 Broadway Penthouse,</p>
-                <p class="footer__location-text">New York, NY 10012, USA</p>
-              </div>
-              <div class="footer__email">
-                <a
-                  class="footer__email-text"
-                  href="mailto:info@thebeesknees.com"
-                  >info@thebeesknees.com</a
-                >
-              </div>
+          <div class="footer__card">
+            <a class="footer__logo" href="./index.html"
+              ><img
+                class="footer__logo"
+                src="./assets/Logo/Logo-bandsite.svg"
+                alt=""
+            /></a>
+            <div class="footer__name">
+              <p class="footer__name-text">Carson Whyte</p>
+              <p class="footer__name-text">ARCH Entertainment</p>
             </div>
-            <div class="footer__person-card">
-              <div class="footer__name">
-                <p class="footer__name-text">Pearl Gregg</p>
-                <p class="footer__name-text">Limitless Artist Group</p>
-              </div>
-              <div class="footer__location">
-                <p class="footer__location-text">Booking Agent for</p>
-                <p class="footer__location-text">USA / South America / Japan</p>
-              </div>
-              <div class="footer__email">
-                <a
-                  class="footer__email-text"
-                  href="mailto:pearl.gregg@limitlessag.com"
-                  >pearl.gregg@limitlessag.com</a
-                >
-              </div>
+            <div class="footer__location">
+              <p class="footer__location-text">Booking Agent for</p>
+              <p class="footer__location-text">UK / EU / AU</p>
             </div>
-            <div class="footer__person-card">
-              <div class="footer__name">
-                <p class="footer__name-text">Carson Whyte</p>
-                <p class="footer__name-text">ARCH Entertainment</p>
-              </div>
-              <div class="footer__location">
-                <p class="footer__location-text">Booking Agent for</p>
-                <p class="footer__location-text">UK / EU / AU</p>
-              </div>
-              <div class="footer__email">
-                <a
-                  class="footer__email-text"
-                  href="mailto@cwhyte@archentertainment.com"
-                  >cwhyte@archentertainment.com</a
-                >
-              </div>
+            <div class="footer__email">
+              <a
+                class="footer__email-text"
+                href="mailto@cwhyte@archentertainment.com"
+                >cwhyte@archentertainment.com</a
+              >
             </div>
           </div>
         </div>
+        <h3 class="footer__copyright">
+          Copyright The Bees Knees © 2021 All Rights Reserved
+        </h3>
       </div>
-      <a href="./index.html"
-        ><img class="footer__logo" src="./assets/Logo/Logo-bandsite.svg" alt=""
-      /></a>
-      <h3 class="footer__copyright">
-        Copyright The Bees Knees © 2021 All Rights Reserved
-      </h3>
     </footer>
   </body>
 </html>
