--- a/index.html
+++ b/index.html
@@ -101,47 +101,47 @@
           <img
             class="photos__image"
             src="./assets/Images/Photo-gallery-1.jpg"
-            alt=""
+            alt="hands up at party"
           />
           <img
             class="photos__image"
             src="./assets/Images/Photo-gallery-2.jpg"
-            alt=""
+            alt="girl dancing"
           />
           <img
             class="photos__image"
             src="./assets/Images/Photo-gallery-3.jpg"
-            alt=""
+            alt="hands up at party"
           />
           <img
             class="photos__image"
             src="./assets/Images/Photo-gallery-4.jpg"
-            alt=""
+            alt="girl at concert"
           />
           <img
             class="photos__image"
             src="./assets/Images/Photo-gallery-5.jpg"
-            alt=""
+            alt="fireworks on stage"
           />
           <img
             class="photos__image"
             src="./assets/Images/Photo-gallery-6.jpg"
-            alt=""
+            alt="singer"
           />
           <img
             class="photos__image"
             src="./assets/Images/Photo-gallery-7.jpg"
-            alt=""
+            alt="confetti"
           />
           <img
             class="photos__image"
             src="./assets/Images/Photo-gallery-8.jpg"
-            alt=""
+            alt="dj table"
           />
           <img
             class="photos__image"
             src="./assets/Images/Photo-gallery-9.jpg"
-            alt=""
+            alt="confetti at concert"
           />
         </div>
       </div>
@@ -173,19 +173,19 @@
                 ><img
                   class="footer__socials-icon"
                   src="./assets/Icons/SVG/Icon-instagram.svg"
-                  alt=""
+                  alt="instagram icon"
               /></a>
               <a href=""
                 ><img
                   class="footer__socials-icon"
                   src="./assets/Icons/SVG/Icon-facebook.svg"
-                  alt=""
+                  alt="facebook icon"
               /></a>
               <a href=""
                 ><img
                   class="footer__socials-icon"
                   src="./assets/Icons/SVG/Icon-twitter.svg"
-                  alt=""
+                  alt="twitter icon"
               /></a>
             </div>
             <div class="footer__name">
@@ -209,7 +209,7 @@
               ><img
                 class="footer__logo"
                 src="./assets/Logo/Logo-bandsite.svg"
-                alt=""
+                alt="BandSite logo"
             /></a>
             <div class="footer__name">
               <p class="footer__name-text">Carson Whyte</p>
