make footer responsive on small screens

--- a/index.html
+++ b/index.html
@@ -169,19 +169,19 @@
           </div>
           <div class="footer__card">
             <div class="footer__socials-container">
-              <a href=""
+              <a href="https://instagram.com"
                 ><img
                   class="footer__socials-icon"
                   src="./assets/Icons/SVG/Icon-instagram.svg"
                   alt="instagram icon"
               /></a>
-              <a href=""
+              <a href="https://facebook.com"
                 ><img
                   class="footer__socials-icon"
                   src="./assets/Icons/SVG/Icon-facebook.svg"
                   alt="facebook icon"
               /></a>
-              <a href=""
+              <a href="https://twitter.com"
                 ><img
                   class="footer__socials-icon"
                   src="./assets/Icons/SVG/Icon-twitter.svg"
