add shows hero section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           >
             <h3 class="header__nav-link header__nav-link--active">Biography</h3>
           </a>
-          <a class="header__nav-link-container" href="#">
+          <a class="header__nav-link-container" href="./pages/shows.html">
             <h3 class="header__nav-link">Shows</h3>
           </a>
         </div>
