--- a/pages/shows.html
+++ b/pages/shows.html
@@ -8,6 +8,137 @@
     <link rel="stylesheet" href="../styles/shows.css" />
   </head>
   <body>
-    <!------------------------Header---------------------------->
+    <!------------------------Shows Header---------------------------->
+
+    <header class="header">
+      <div class="header__wrapper">
+        <a href="./index.html" class="header__logo-wrapper">
+          <img
+            class="header__logo"
+            src="../assets/Logo/Logo-bandsite.svg"
+            alt="bandsite logo"
+          />
+        </a>
+        <div class="header__nav-wrapper">
+          <a class="header__nav-link-container" href="../index.html">
+            <h3 class="header__nav-link">Biography</h3>
+          </a>
+          <a
+            class="header__nav-link-container header__nav-link-container--active"
+            href="./shows.html"
+          >
+            <h3 class="header__nav-link header__nav-link--active">Shows</h3>
+          </a>
+        </div>
+      </div>
+    </header>
+
+    <!---------------------Shows Hero--------------------------->
+
+    <section class="hero">
+      <div class="hero__wrapper">
+        <div class="hero__top">
+          <h2 class="hero__album-name">Beautiful Beasts Album</h2>
+        </div>
+        <div class="hero__bottom">
+          <h1 class="hero__title">Queen of Yellow x For The Stings</h1>
+          <iframe
+            class="hero__song-embed"
+            scrolling="no"
+            frameborder="no"
+            allow="autoplay"
+            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1279207600&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
+          ></iframe>
+        </div>
+      </div>
+    </section>
+
+    <!--------------------------Shows Footer----------------->
+
+    <footer class="footer">
+      <div class="footer__wrapper">
+        <div class="footer__card-container">
+          <div class="footer__card">
+            <h2 class="footer__title">Get in Touch</h2>
+            <div class="footer__name">
+              <p class="footer__name-text">Cam Adams</p>
+              <p class="footer__name-text">The Bees Knees Management</p>
+            </div>
+            <div class="footer__location">
+              <p class="footer__location-text">503 Broadway Penthouse,</p>
+              <p class="footer__location-text">New York, NY 10012, USA</p>
+            </div>
+            <div class="footer__email">
+              <a class="footer__email-text" href="mailto:info@thebeesknees.com"
+                >info@thebeesknees.com</a
+              >
+            </div>
+          </div>
+          <div class="footer__card">
+            <div class="footer__socials-container">
+              <a href="https://instagram.com"
+                ><img
+                  class="footer__socials-icon"
+                  src="../assets/Icons/SVG/Icon-instagram.svg"
+                  alt="instagram icon"
+              /></a>
+              <a href="https://facebook.com"
+                ><img
+                  class="footer__socials-icon"
+                  src="../assets/Icons/SVG/Icon-facebook.svg"
+                  alt="facebook icon"
+              /></a>
+              <a href="https://twitter.com"
+                ><img
+                  class="footer__socials-icon"
+                  src="../assets/Icons/SVG/Icon-twitter.svg"
+                  alt="twitter icon"
+              /></a>
+            </div>
+            <div class="footer__name">
+              <p class="footer__name-text">Pearl Gregg</p>
+              <p class="footer__name-text">Limitless Artist Group</p>
+            </div>
+            <div class="footer__location">
+              <p class="footer__location-text">Booking Agent for</p>
+              <p class="footer__location-text">USA / South America / Japan</p>
+            </div>
+            <div class="footer__email">
+              <a
+                class="footer__email-text"
+                href="mailto:pearl.gregg@limitlessag.com"
+                >pearl.gregg@limitlessag.com</a
+              >
+            </div>
+          </div>
+          <div class="footer__card">
+            <a class="footer__logo" href="./index.html"
+              ><img
+                class="footer__logo"
+                src="../assets/Logo/Logo-bandsite.svg"
+                alt="BandSite logo"
+            /></a>
+            <div class="footer__name">
+              <p class="footer__name-text">Carson Whyte</p>
+              <p class="footer__name-text">ARCH Entertainment</p>
+            </div>
+            <div class="footer__location">
+              <p class="footer__location-text">Booking Agent for</p>
+              <p class="footer__location-text">UK / EU / AU</p>
+            </div>
+            <div class="footer__email">
+              <a
+                class="footer__email-text"
+                href="mailto@cwhyte@archentertainment.com"
+                >cwhyte@archentertainment.com</a
+              >
+            </div>
+          </div>
+        </div>
+        <h3 class="footer__copyright">
+          Copyright The Bees Knees © 2021 All Rights Reserved
+        </h3>
+      </div>
+    </footer>
   </body>
 </html>
