--- a/pages/shows.html
+++ b/pages/shows.html
@@ -12,7 +12,7 @@
 
     <header class="header">
       <div class="header__wrapper">
-        <a href="./index.html" class="header__logo-wrapper">
+        <a href="../index.html" class="header__logo-wrapper">
           <img
             class="header__logo"
             src="../assets/Logo/Logo-bandsite.svg"
@@ -49,6 +49,21 @@
             allow="autoplay"
             src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1279207600&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
           ></iframe>
+        </div>
+      </div>
+    </section>
+
+    <!-----------------------------Shows Ticket Section-------------------------------->
+    <section class="tickets">
+      <div class="tickets__wrapper">
+        <h2>Shows</h2>
+        <div class="tickets__shows-container">
+          <div class="tickets__headings-container">
+            <p>Date</p>
+            <p>Venue</p>
+            <p>Location</p>
+          </div>
+          <div class="tickets__show"></div>
         </div>
       </div>
     </section>
@@ -112,7 +127,7 @@
             </div>
           </div>
           <div class="footer__card">
-            <a class="footer__logo" href="./index.html"
+            <a class="footer__logo" href="../index.html"
               ><img
                 class="footer__logo"
                 src="../assets/Logo/Logo-bandsite.svg"
