start bio javascript

--- a/index.html
+++ b/index.html
@@ -147,6 +147,37 @@
       </div>
     </section>
 
+    <!-----------------------Comments--------------------->
+    <section class="comments">
+      <div class="comments__wrapper">
+        <h2 class="comments__title"></h2>
+        <div class="comments__form-container">
+          <form action="">
+            <label for="commenterName">Name</label>
+            <input
+              id="commenterName"
+              type="text"
+              name="name"
+              placeholder="Enter your name"
+            />
+            <label for="commenterComment">Comment</label>
+            <input
+              id="commenterComment"
+              type="textarea"
+              name="comment"
+              placeholder="Add a new comment"
+            />
+            <button type="submit">Comment</button>
+          </form>
+          <img
+            class="comments__avatar"
+            src="./assets/Images/Mohan-muruge.jpg"
+            alt="avatar"
+          />
+        </div>
+      </div>
+    </section>
+
     <!------------------Footer--------------------------->
     <footer class="footer">
       <div class="footer__wrapper">
