add bio javascript

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       <div class="comments__wrapper">
         <h2 class="comments__title"></h2>
         <div class="comments__form-container">
-          <form action="">
+          <form class="comments__form" action="">
             <label for="commenterName">Name</label>
             <input
               id="commenterName"
@@ -175,6 +175,7 @@
             alt="avatar"
           />
         </div>
+        <ul class="comments__list"></ul>
       </div>
     </section>
 
