add javascript functions to bio page

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
     </footer>
 
     <!--Messing around-->
-    <p class="date"></p>
+    <div class="date"></div>
     <!--End of messing around-->
     <script src="./scripts/index-page.js"></script>
   </body>
