set up backend api

--- a/index.html
+++ b/index.html
@@ -277,6 +277,8 @@
     <!--Messing around-->
     <div class="date"></div>
     <!--End of messing around-->
+
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <script src="./scripts/index-page.js"></script>
   </body>
 </html>
