--- a/pages/shows.html
+++ b/pages/shows.html
@@ -156,6 +156,7 @@
         </h3>
       </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <script src="../scripts/build-shows-page.js"></script>
   </body>
 </html>
